# face-quard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.web  README.md  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/face-guard-backend/: Cargo.toml
crates/face-guard-backend/src/: main.rs  router.rs  util.rs
crates/face-guard-backend/src/bootstrap/: constant.rs  db.rs  mod.rs  server.rs  tracing.rs
crates/face-guard-backend/src/config/: mod.rs
crates/face-guard-backend/src/domain/: face_embedding.rs  face_image.rs  mod.rs
crates/face-guard-backend/src/http/: error.rs
crates/face-guard-backend/src/http/dto/: mod.rs  request.rs  response.rs
crates/face-guard-backend/src/http/dto/face_images/: response.rs
crates/face-guard-backend/src/http/dto/face_search/: request.rs  response.rs
crates/face-guard-backend/src/http/handlers/: create_face_image.rs  face_image.rs  face_images.rs  face_search.rs  list_face_image.rs  mod.rs  object.rs
crates/face-guard-backend/src/repository/: face_embedding.rs  face_image.rs  mod.rs
crates/face-guard-backend/src/storage/: mod.rs  s3.rs
crates/face-guard-backend/src/use_case/: create_face_image.rs  face_search.rs  image_util.rs  image_validation.rs  list_face_image.rs  mod.rs  upload_face_image.rs  upload_object.rs
crates/face-guard-ml/: Cargo.toml
crates/face-guard-ml/src/: detector.rs  embedding.rs  image.rs  lib.rs
crates/face-guard-web/: Cargo.toml  index.html  styles.css
crates/face-guard-web/src/: main.rs
migrations/: 20260523114058_create_face_image.down.sql  20260523114058_create_face_image.up.sql  20260620194028_create_face_embedding.down.sql  20260620194028_create_face_embedding.up.sql
