[workspace]
resolver = "2"
members = ["crates/common","crates/face-guard-backend", "crates/face-guard-ml", "crates/face-guard-web"]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8", features = ["multipart", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }
pgvector = { version = "0.4", features = ["sqlx"] }

image = "0.25"
ndarray = "0.17"
ort = "2.0.0-rc.12"

object_store = { version = "0.13", features = ["aws"] }

dotenvy = "0.15"
config = "0.15"

leptos = "0.8"
leptos_axum = "0.8"
leptos_router = "0.8"
