[package]
name = "face-guard-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true 
thiserror.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

axum.workspace = true
tower-http.workspace = true

sqlx.workspace = true
pgvector.workspace = true

object_store.workspace = true
dotenvy.workspace = true
config.workspace = true

image.workspace = true

async-trait = "0.1"
reqwest = { version = "0.13", default-features = false }

face-guard-ml = { path = "../face-guard-ml" }
common = { path = "../common" }
