[package]
name = "face-guard-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

gloo-net = "0.6"
js-sys = "0.3"
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Document",
    "Element",
    "Event",
    "File",
    "FileList",
    "FormData",
    "HtmlElement",
    "HtmlInputElement",
    "Storage",
    "Url",
    "Window"
] }
